--- a/Diploma/package.json
+++ b/Diploma/package.json
@@ -60,7 +60,9 @@
     "zone.js": "0.8.12"
   },
   "dependencies": {
-    "@ngui/map": "^0.20.2",
-    "@types/googlemaps": "^3.30.8"
+    "@agm/core": "^1.0.0-beta.2",
+    "@agm/snazzy-info-window": "^1.0.0-beta.2",
+    "agm-overlays": "^1.1.3",
+    "snazzy-info-window": "^1.1.0"
   }
 }
